--- a/marmelad/_blocks/_footer/footer.html
+++ b/marmelad/_blocks/_footer/footer.html
@@ -1,5 +1,5 @@
 <footer block="footer">
-    <div elem="content">
-        <p><small><a href="https://github.com/yunusga/marmelad" rel="noopener" target="_blank">Marmelad v{{app.package.version}}</a></small></p>
-    </div>
+  <div elem="section">
+    
+  </div>
 </footer><!-- footer -->
