added top line & first screen & more

--- a/marmelad/_blocks/_header/header.html
+++ b/marmelad/_blocks/_header/header.html
@@ -1,5 +1,7 @@
 <header block="header">
   <div elem="section">
-    
+    <div elem="inner">
+      {% include "top-line.html" %}
+    </div>
   </div>
 </header><!-- header -->
