added news blocks& more

--- a/marmelad/_blocks/hero/hero.html
+++ b/marmelad/_blocks/hero/hero.html
@@ -5,9 +5,9 @@
         <div elem="img"><img src="img/main-pic.jpg" alt=""></div>
         <div elem="content">
           <div elem="date">30.06.2022</div>
-          <div elem="title">
+          <h1 elem="title">
             Что такое метавселенная и почему о ней все говорят
-          </div>
+          </h1>
           <a elem="link-more" class="button-default button-default--light" href="#">
             <span>Узнать ответ</span>
           </a>
