added footer & more

--- a/marmelad/_blocks/_footer/footer.html
+++ b/marmelad/_blocks/_footer/footer.html
@@ -1,5 +1,113 @@
 <footer block="footer">
   <div elem="section">
-    
+    <div elem="inner">
+      <div elem="top">
+        <div elem="cols">
+          <div elem="backdrop-fill" class="js-backdrop-fill-footer"></div>
+          <div elem="col" mods="fill">
+            {% include "newsletter-form.html" %}
+          </div>
+          <div elem="col" mods="info">
+            <div elem="title">
+              Будь с <br> сириусом, <br> чтобы быть <br> в курсе
+            </div>
+            <div elem="desc">
+              событий <br>
+              тем <br>
+              новостей <br>
+              проблем <br>
+              решений <br>
+              жизни
+            </div>
+          </div>
+          <div elem="col" mods="fill">
+            {% include "social-links.html" %}
+          </div>
+        </div>
+      </div>
+      <div elem="middle">
+        <a elem="logo" href="/">
+          <img src="img/logo-light.svg" alt="">
+        </a>
+        <div block="social-links" mods="light">
+          <div elem="section">
+            <div elem="items">
+              <a elem="item" href="#">
+                <span elem="icon">
+                  <img elem="icon-light" src="img/social-tg-icon-light.svg" alt="">
+                </span>
+              </a>
+              <a elem="item" href="#">
+                <span elem="icon">
+                  <img elem="icon-light" src="img/social-vk-icon-light.svg" alt="">
+                </span>
+              </a>
+              <a elem="item" href="#">
+                <span elem="icon">
+                  <img elem="icon-light" src="img/social-ok-icon-light.svg" alt="">
+                </span>
+              </a>
+              <a elem="item" href="#">
+                <span elem="icon">
+                  <img elem="icon-light" src="img/social-ya-icon-light.svg" alt="">
+                </span>
+              </a>
+            </div>
+          </div>
+        </div><!-- social-links -->
+        <div elem="menu" class="contain">
+          <nav elem="nav">
+            <ul>
+              <li>
+                <a href="#">рубрики</a>
+                <ul>
+                  <li><a href="#">Название рубрики</a></li>
+                  <li><a href="#">Название рубрики</a></li>
+                  <li><a href="#">Название рубрики</a></li>
+                  <li><a href="#">Название рубрики</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#">рубрики 2</a>
+                <ul>
+                  <li><a href="#">Название рубрики</a></li>
+                  <li><a href="#">Название рубрики</a></li>
+                  <li><a href="#">Название рубрики</a></li>
+                  <li><a href="#">Название рубрики</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#">рубрики 3</a>
+                <ul>
+                  <li><a href="#">Название рубрики</a></li>
+                  <li><a href="#">Название рубрики</a></li>
+                  <li><a href="#">Спецпроекты</a></li>
+                  <li><a href="#">Подкасты</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#">О нас</a>
+                <ul>
+                  <li><a href="#">О проекте</a></li>
+                  <li><a href="#">Об авторах</a></li>
+                  <li><a href="#">Медиа-кит</a></li>
+                  <li><a href="#">Реклама</a></li>
+                </ul>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <a elem="button-go-to-top" class="button-default button-default--light" href="#">
+          <span>Наверх</span>
+        </a>
+      </div>
+      <div elem="bottom">
+        <div elem="info" class="contain">
+          <span>© 2022, Сириус Журнал</span>
+          <a href="#">Политика конфиденциальности</a>
+          <a href="#">Пользовательское соглашение</a>
+        </div>
+      </div>
+    </div>
   </div>
 </footer><!-- footer -->
