--- a/marmelad/_blocks/other-articles/other-articles.html
+++ b/marmelad/_blocks/other-articles/other-articles.html
@@ -3,8 +3,10 @@
     <div elem="banner-title">
       <img src="img/title-pic.jpg" alt="">
     </div>
-    <div elem="inner" class="contain">
+    <div elem="head">
       <h2 elem="title">Это интересно</h2>
+    </div>
+    <div elem="inner" class="contain">
       <div elem="cols">
         <div elem="col">
           <div elem="items">
