added fill on  card

--- a/marmelad/_blocks/news-slider/news-slider.html
+++ b/marmelad/_blocks/news-slider/news-slider.html
@@ -23,6 +23,7 @@
                 </span>
               </span>
             </a>
+            <span class="fill-card"></span>
           </div>
           <div elem="item" class="swiper-slide">
             <a elem="body" href="#">
@@ -45,6 +46,7 @@
                 </span>
               </span>
             </a>
+            <span class="fill-card"></span>
           </div>
           <div elem="item" class="swiper-slide">
             <a elem="body" href="#">
@@ -65,6 +67,7 @@
                 </span>
               </span>
             </a>
+            <span class="fill-card"></span>
           </div>
           <div elem="item" class="swiper-slide">
             <a elem="body" href="#">
@@ -85,6 +88,7 @@
                 </span>
               </span>
             </a>
+            <span class="fill-card"></span>
           </div>
         </div>
         <div class="swiper-pagination"></div>
