added scroll animate on Articles day and News card & more

--- a/marmelad/_blocks/articles-day/articles-day.html
+++ b/marmelad/_blocks/articles-day/articles-day.html
@@ -10,7 +10,7 @@
             {% include "news-slider.html" %}
           </div>
         </div>
-        <div elem="col" mods="left"  class="slow">
+        <div elem="col" mods="left">
           <div elem="items">
             <div elem="item">
               <a block="article-thumb" href="#">
@@ -89,7 +89,7 @@
           </div>
         </div>
         <div elem="col" mods="right">
-          <div elem="items"  id="featured-content-grid-wrapper">
+          <div elem="items">
             <div elem="item">
               <a block="article-thumb" href="#">
                 <span elem="body">
