--- a/marmelad/_blocks/main-menu/main-menu.html
+++ b/marmelad/_blocks/main-menu/main-menu.html
@@ -2,11 +2,11 @@
   <nav elem="nav">
     <ul>
       <li><a href="#">Образование</a></li>
-      <li><a href="#" style="color: #8B00FD;">Наука</a></li>
+      <li class="is-active"><a href="#">Наука</a></li>
       <li><a href="#">Технологии</a></li>
       <li><a href="#">Спорт</a></li>
       <li><a href="#">Культура</a></li>
-      <li><a href="#" style="color: #2E9500;">Сириус</a></li>
+      <li><a href="#" class="color-mode">Сириус</a></li>
     </ul>
   </nav>
 </div><!-- main-menu -->
