added serach panel & more

--- a/marmelad/_blocks/newsletter-form/newsletter-form.html
+++ b/marmelad/_blocks/newsletter-form/newsletter-form.html
@@ -5,13 +5,15 @@
       <div elem="fields">
         <div elem="field">
           <div elem="input">
-            <input type="text" placeholder="ваш email">
+            <input type="text" placeholder="Ваш email">
           </div>
           <button elem="button-ok" class="button-default button-default--dark" type="submit"><span>ОК</span></button>
         </div>
       </div>
       <div elem="note">
-        Передавая свои данные и нажимая кнопку “Подписаться” вы соглашаетесь с <a href="#">политикой конфиденциальности</a>
+        Передавая свои данные и нажимая кнопку <br>
+        “Подписаться” вы соглашаетесь с <br>
+        <a href="#">политикой конфиденциальности</a>
       </div>
     </form>
   </div>
