--- a/marmelad/_blocks/articles-day/articles-day.html
+++ b/marmelad/_blocks/articles-day/articles-day.html
@@ -1,7 +1,7 @@
 <div block="articles-day">
   <div elem="section">
     <div elem="head">
-      <h2 elem="title">Картина дня</h2>
+      <h2 elem="title" class="animate-title">Картина дня</h2>
     </div>
     <div elem="inner" class="contain">
       <div elem="cols">
@@ -16,7 +16,7 @@
               <a block="article-thumb" href="#">
                 <span elem="body">
                   <span elem="img">
-                    <img src="img/article-thumb-img.jpg" alt="">
+                    <img width="280" height="280" src="img/article-thumb-img.jpg" alt="">
                   </span>
                   <span elem="content">
                     <span elem="name">
@@ -41,7 +41,7 @@
               <a block="article-thumb" href="#">
                 <span elem="body">
                   <span elem="img">
-                    <img src="img/article-thumb-img2.jpg" alt="">
+                    <img width="280" height="280" src="img/article-thumb-img2.jpg" alt="">
                   </span>
                   <span elem="content">
                     <span elem="name">
@@ -64,7 +64,7 @@
               <a block="article-thumb" href="#">
                 <span elem="body">
                   <span elem="img">
-                    <img src="img/article-thumb-img3.jpg" alt="">
+                    <img width="280" height="280" src="img/article-thumb-img3.jpg" alt="">
                   </span>
                   <span elem="content">
                     <span elem="icon">
@@ -94,7 +94,7 @@
               <a block="article-thumb" href="#">
                 <span elem="body">
                   <span elem="img">
-                    <img src="img/article-thumb-img4.jpg" alt="">
+                    <img width="280" height="164" src="img/article-thumb-img4.jpg" alt="">
                   </span>
                   <span elem="content">
                     <span elem="name">
@@ -118,7 +118,7 @@
               <a block="article-thumb" href="#">
                 <span elem="body">
                   <span elem="img">
-                    <img src="img/article-thumb-img5.jpg" alt="">
+                    <img width="280" height="164" src="img/article-thumb-img5.jpg" alt="">
                   </span>
                   <span elem="content">
                     <span elem="name">
@@ -187,7 +187,7 @@
               <a block="article-thumb" mods="video" href="#">
                 <span elem="body">
                   <span elem="img">
-                    <img src="img/article-thumb-poster.png" alt="">
+                    <img width="144" height="144" src="img/article-thumb-poster.png" alt="">
                   </span>
                   <span elem="content">
                     <span elem="icon">
