--- a/marmelad/_blocks/other-articles/other-articles.html
+++ b/marmelad/_blocks/other-articles/other-articles.html
@@ -4,7 +4,7 @@
       <img src="img/title-pic.jpg" alt="">
     </div>
     <div elem="head">
-      <h2 elem="title">Это интересно</h2>
+      <h2 elem="title" class="animate-title">Это интересно</h2> 
     </div>
     <div elem="inner" class="contain">
       <div elem="cols">
