--- a/marmelad/_blocks/category-menu/category-menu.html
+++ b/marmelad/_blocks/category-menu/category-menu.html
@@ -19,23 +19,23 @@
           <div elem="section">
             <div elem="items">
               <a elem="item" href="#">
-                <span elem="icon">
-                  <img elem="icon-dark" src="img/social-tg-icon.svg" alt="">
+                <span elem="icon" mods="tg">
+                  <!-- <img elem="icon-dark" src="img/social-tg-icon.svg" alt=""> -->
                 </span>
               </a>
               <a elem="item" href="#">
-                <span elem="icon">
-                  <img elem="icon-dark" src="img/social-vk-icon.svg" alt="">
+                <span elem="icon" mods="vk">
+                  <!-- <img elem="icon-dark" src="img/social-vk-icon.svg" alt=""> -->
                 </span>
               </a>
               <a elem="item" href="#">
-                <span elem="icon">
-                  <img elem="icon-dark" src="img/social-ok-icon.svg" alt="">
+                <span elem="icon" mods="ok">
+                  <!-- <img elem="icon-dark" src="img/social-ok-icon.svg" alt=""> -->
                 </span>
               </a>
               <a elem="item" href="#">
-                <span elem="icon">
-                  <img elem="icon-dark" src="img/social-ya-icon.svg" alt="">
+                <span elem="icon" mods="ya">
+                  <!-- <img elem="icon-dark" src="img/social-ya-icon.svg" alt=""> -->
                 </span>
               </a>
             </div>
