--- a/marmelad/_blocks/top-line/top-line.html
+++ b/marmelad/_blocks/top-line/top-line.html
@@ -2,7 +2,7 @@
   <div elem="section">
     <div elem="main-bar">
       <div elem="inner" class="contain">
-        <a elem="button-search" class="js-button-search" href="#">{{ _icon('search-icon', { tag: 'i' }) }}</a>
+        <a elem="button-search" class="js-button-search" href="#"></a>
         {% include "search-panel.html" %}
         {% include "logo.html" %}
         <button elem="button-burger" class="js-button-burger" type="button"></button>
