fix slider & more

--- a/marmelad/_blocks/articles-day/articles-day.html
+++ b/marmelad/_blocks/articles-day/articles-day.html
@@ -7,7 +7,200 @@
       <div elem="cols">
         <div elem="col" mods="slider">
           <div elem="slider-wrapper">
-            {% include "news-slider.html" %}
+            {#% include "news-slider.html" %#}
+            <div block="news-slider" mods="desktop">
+              <div elem="section">
+                <div elem="inner">
+                  <div elem="container" class="card-stack">
+                    <a class="buttons prev" href="#"></a>
+                    <div elem="items" class="card-list">
+                      <div elem="item" class="card" data-index="">
+                        <a elem="body" href="#">
+                          <span elem="img"><img src="img/news-slider-img.jpg" alt=""></span>
+                          <span elem="content">
+                            <span elem="icon"><img src="img/article-thumb-icon.png" alt=""></span>
+                            <span elem="name">
+                              ОТКРЫТО ПРОСТРАНСТВО ДЛЯ СПОРТА И АКТИВНОГО ОТДЫХА
+                            </span>
+                            <span elem="tags">
+                              <span elem="tag">#Дети</span>
+                              <span elem="tag">#Образование</span>
+                            </span>
+                            <span elem="date">
+                              <span>23 ИЮЛЯ</span>
+                              <i></i>
+                              <span>18:43</span>
+                            </span>
+                          </span>
+                        </a>
+                        <span class="fill-card"></span>
+                      </div>
+                      <div elem="item" class="card" data-index="">
+                        <a elem="body" href="#">
+                          <span elem="img"><img src="img/news-slider-img2.jpg" alt=""></span>
+                          <span elem="content">
+                            <!-- <span elem="icon"><img src="img/article-thumb-icon.png" alt=""></span> -->
+                            <span elem="name">
+                              Туман рассеялся:
+                              ученые увидели
+                              рождение планет
+                            </span>
+                            <span elem="tags">
+                              <span elem="tag">#Дети</span>
+                              <span elem="tag">#Образование</span>
+                            </span>
+                            <span elem="date">
+                              <span>23 ИЮЛЯ</span>
+                              <i></i>
+                              <span>18:43</span>
+                            </span>
+                          </span>
+                        </a>
+                        <span class="fill-card"></span>
+                      </div>
+                      <div elem="item" class="card">
+                        <a elem="body" href="#">
+                          <span elem="img"><img src="img/news-slider-img3.jpg" alt=""></span>
+                          <span elem="content">
+                            <!-- <span elem="icon"><img src="img/article-thumb-icon.png" alt=""></span> -->
+                            <span elem="name">
+                              В «Сириусе» открыли Большой летний музыкальный фестиваль
+                            </span>
+                            <span elem="tags">
+                              <span elem="tag">#Дети</span>
+                              <span elem="tag">#Образование</span>
+                            </span>
+                            <span elem="date">
+                              <span>23 ИЮЛЯ</span>
+                              <i></i>
+                              <span>18:43</span>
+                            </span>
+                          </span>
+                        </a>
+                        <span class="fill-card"></span>
+                      </div>
+                      <div elem="item" class="card">
+                        <a elem="body" href="#">
+                          <span elem="img"><img src="img/news-slider-img4.jpg" alt=""></span>
+                          <span elem="content">
+                            <!-- <span elem="icon"><img src="img/article-thumb-icon.png" alt=""></span> -->
+                            <span elem="name">
+                              Шоу Поющего фонтана завершит выступление симфонического оркестра Армении
+                            </span>
+                            <span elem="tags">
+                              <span elem="tag">#Дети</span>
+                              <span elem="tag">#Образование</span>
+                            </span>
+                            <span elem="date">
+                              <span>23 ИЮЛЯ</span>
+                              <i></i>
+                              <span>18:43</span>
+                            </span>
+                          </span>
+                        </a>
+                        <span class="fill-card"></span>
+                      </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                    <a class="buttons next" href="#"></a>
+                  </div>
+                </div>
+              </div>
+            </div><!-- news-slider -->
+            <div block="news-slider" mods="mobile">
+              <div elem="section">
+                <div elem="inner">
+                  <div elem="container" class="swiper js-news-slider">
+                    <div elem="items" class="swiper-wrapper">
+                      <div elem="item" class="swiper-slide">
+                        <a elem="body" href="#">
+                          <span elem="img"><img src="img/news-slider-img.jpg" alt=""></span>
+                          <span elem="content">
+                            <span elem="icon"><img src="img/article-thumb-icon.png" alt=""></span>
+                            <span elem="name">
+                              ОТКРЫТО ПРОСТРАНСТВО ДЛЯ СПОРТА И АКТИВНОГО ОТДЫХА
+                            </span>
+                            <span elem="tags">
+                              <span elem="tag">#Дети</span>
+                              <span elem="tag">#Образование</span>
+                            </span>
+                            <span elem="date">
+                              <span>23 ИЮЛЯ</span>
+                              <i></i>
+                              <span>18:43</span>
+                            </span>
+                          </span>
+                        </a>
+                        <span class="fill-card"></span>
+                      </div>
+                      <div elem="item" class="swiper-slide">
+                        <a elem="body" href="#">
+                          <span elem="img"><img src="img/news-slider-img2.jpg" alt=""></span>
+                          <span elem="content">
+                            <!-- <span elem="icon"><img src="img/article-thumb-icon.png" alt=""></span> -->
+                            <span elem="name">
+                              Туман рассеялся:
+                              ученые увидели
+                              рождение планет
+                            </span>
+                            <span elem="tags">
+                              <span elem="tag">#Дети</span>
+                              <span elem="tag">#Образование</span>
+                            </span>
+                            <span elem="date">
+                              <span>23 ИЮЛЯ</span>
+                              <i></i>
+                              <span>18:43</span>
+                            </span>
+                          </span>
+                        </a>
+                      </div>
+                      <div elem="item" class="swiper-slide">
+                        <a elem="body" href="#">
+                          <span elem="img"><img src="img/news-slider-img3.jpg" alt=""></span>
+                          <span elem="content">
+                            <!-- <span elem="icon"><img src="img/article-thumb-icon.png" alt=""></span> -->
+                            <span elem="name">
+                              В «Сириусе» открыли Большой летний музыкальный фестиваль
+                            </span>
+                            <span elem="tags">
+                              <span elem="tag">#Дети</span>
+                              <span elem="tag">#Образование</span>
+                            </span>
+                            <span elem="date">
+                              <span>23 ИЮЛЯ</span>
+                              <i></i>
+                              <span>18:43</span>
+                            </span>
+                          </span>
+                        </a>
+                      </div>
+                      <div elem="item" class="swiper-slide">
+                        <a elem="body" href="#">
+                          <span elem="img"><img src="img/news-slider-img4.jpg" alt=""></span>
+                          <span elem="content">
+                            <!-- <span elem="icon"><img src="img/article-thumb-icon.png" alt=""></span> -->
+                            <span elem="name">
+                              Шоу Поющего фонтана завершит выступление симфонического оркестра Армении
+                            </span>
+                            <span elem="tags">
+                              <span elem="tag">#Дети</span>
+                              <span elem="tag">#Образование</span>
+                            </span>
+                            <span elem="date">
+                              <span>23 ИЮЛЯ</span>
+                              <i></i>
+                              <span>18:43</span>
+                            </span>
+                          </span>
+                        </a>
+                      </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                  </div>
+                </div>
+              </div>
+            </div><!-- news-slider -->
           </div>
         </div>
         <div elem="col" mods="left">
@@ -178,6 +371,62 @@
                       <span>23 ИЮЛЯ</span>
                       <i></i>
                       <span>18:43</span>
+                    </span>
+                  </span>
+                </span>
+              </a><!-- article-thumb -->
+            </div>
+            <div elem="item">
+              <a block="article-thumb" mods="video" href="#">
+                <span elem="body">
+                  <span elem="img">
+                    <img width="144" height="144" src="img/article-thumb-poster.png" alt="">
+                  </span>
+                  <span elem="content">
+                    <span elem="icon">
+                      <img src="img/article-thumb-play-icon.png" alt="">
+                    </span>
+                    <span elem="name-video">Название подкаста</span>
+                    <span elem="release">3 выпуск</span>
+                    <span elem="name">
+                      Ученые открыли, как гены отца и матери влияют на поведение детей
+                    </span>
+                    <span elem="tags">
+                      <span elem="tag">#Дети</span>
+                      <span elem="tag">#Образование</span>
+                    </span>
+                    <span elem="date">
+                      <span>23 ИЮЛЯ</span>
+                      <i></i>
+                      <span class="time-icon">37 мин</span>
+                    </span>
+                  </span>
+                </span>
+              </a><!-- article-thumb -->
+            </div>
+            <div elem="item">
+              <a block="article-thumb" mods="video" href="#">
+                <span elem="body">
+                  <span elem="img">
+                    <img width="144" height="144" src="img/article-thumb-poster.png" alt="">
+                  </span>
+                  <span elem="content">
+                    <span elem="icon">
+                      <img src="img/article-thumb-play-icon.png" alt="">
+                    </span>
+                    <span elem="name-video">Название подкаста</span>
+                    <span elem="release">3 выпуск</span>
+                    <span elem="name">
+                      Ученые открыли, как гены отца и матери влияют на поведение детей
+                    </span>
+                    <span elem="tags">
+                      <span elem="tag">#Дети</span>
+                      <span elem="tag">#Образование</span>
+                    </span>
+                    <span elem="date">
+                      <span>23 ИЮЛЯ</span>
+                      <i></i>
+                      <span class="time-icon">37 мин</span>
                     </span>
                   </span>
                 </span>
