--- a/marmelad/_blocks/top-line/top-line.html
+++ b/marmelad/_blocks/top-line/top-line.html
@@ -14,11 +14,22 @@
         <div elem="links">
           <a href="#">
             <span>Подкасты</span>
-            {{ _icon('podcasts-icon', { tag: 'i' }) }}
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M6.37596 5.67269C3.20801 9.15726 3.20801 14.8427 6.37596 18.3273L4.89612 19.6727C1.03463 15.4253 1.03463 8.57473 4.89612 4.32731L6.37596 5.67269ZM17.624 18.3273C20.792 14.8427 20.792 9.15726 17.624 5.67269L19.1039 4.32731C22.9654 8.57473 22.9654 15.4253 19.1039 19.6727L17.624 18.3273Z"
+                fill="#1E0B2E" />
+            </svg>
+
           </a>
           <a href="#">
             <span>Вещание</span>
-            {{ _icon('stream-icon', { tag: 'i' }) }}
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M4 6.00018L7.00006 6L6.99994 4L2 4.00031V9.00024H4V6.00018ZM20 6.00024H17V4.00024H22V9.00024H20V6.00024ZM4 18.0002V15.0002H2V20.0003L7.00006 20L6.99994 18L4 18.0002ZM20 18.0002V15.0002H22V20.0002H17V18.0002H20Z"
+                fill="#1E0B2E" />
+              <path d="M16.2047 12.5L9.45471 16.3971L9.45471 8.60289L16.2047 12.5Z" fill="#1E0B2E" />
+            </svg>
+
           </a>
         </div>
       </div>
