added article content & next article & recom article & more

--- a/marmelad/_pages/article-page.html
+++ b/marmelad/_pages/article-page.html
@@ -14,6 +14,10 @@ layout: !!map
 
 {% block main %}
 
-	{#% include "article-content.html" %#}
+	{% include "article-content.html" %}
+
+	{% include "recommended-article.html" %}
+
+	{% include "next-article.html" %}
 
 {% endblock %}
