--- a/marmelad/_blocks/next-article/next-article.html
+++ b/marmelad/_blocks/next-article/next-article.html
@@ -19,13 +19,13 @@
           <img src="img/next-article-img.jpg" alt="">
         </div>
         <div elem="info">
-          <div elem="author">
-            <div elem="author-pic"><img src="img/author-pic.png" alt=""></div>
-            <div elem="author-name">
+          <a elem="author" href="#">
+            <span elem="author-pic"><img src="img/author-pic.png" alt=""></span>
+            <span elem="author-name">
               <strong>Автор</strong>
               <span>Николай Дубинин</span>
-            </div>
-          </div>
+            </span>
+          </a>
           <div elem="reading-time">5 минут на чтение</div>
           <div elem="poster-name">
             <strong>Фото</strong>
