--- a/marmelad/_pages/list-tag-page.html
+++ b/marmelad/_pages/list-tag-page.html
@@ -18,7 +18,7 @@ layout: !!map
     <div elem="section">
       <div elem="head">
         <div elem="content">
-          <h1>Материалы по тегу <a href="#">#Образование</a></h1>
+          <h1>Материалы по тегу <span>#Образование</span></h1>
           <div elem="find-articles">найдено 9 статей</div>
         </div>
       </div>
