--- a/marmelad/_blocks/article-content/article-content.html
+++ b/marmelad/_blocks/article-content/article-content.html
@@ -72,41 +72,43 @@
           Концепций метавселенной много, но самая известная принадлежит венчурному инвестору Мэтью Болу. В своем представлении Бол
           приводит семь характеристик другого мира.
         </p>
-        <ol>
-          <li>
-            <span>
-              Метавселенная не прекращается: ее нельзя поставить на паузу, стереть или завершить.
-            </span>
-          </li>
-          <li>
-            <span>
-              Все события внутри вселенной происходят в режиме реального времени, а действия не зависят от внешних факторов.
-
-            </span>
-          </li>
-          <li>
-            <span>
-              Нет ограничений по числу тех, кто населяет метавселенную.
-            </span>
-          </li>
-          <li>
-            <span>
-              В метавселенной своя экономика: люди получают «деньги» за проделанную «работу», владеют и распоряжаются имуществом.
-            </span>
-          </li>
-          <li>
-            <span>
-              Данные и цифровые активы из разных платформ совмещены: можно пользоваться вещами из Counter-Strike и Fortnite, покупать
-              машину из Need for Speed и продавать ее друзьям на Facebook.
-            </span>
-          </li>
-          <li>
-            <span>
-              Метавселенная наполнена «контентом и опытом», созданными ее пользователями, как отдельными людьми, так и организациями.
-            </span>
-          </li>
-        </ol>
-        <div elem="img-content"><img src="img/article-content-pic.jpg" width="301" height="600" alt=""></div>
+        <div elem="img-content">
+          <ol>
+            <li>
+              <span>
+                Метавселенная не прекращается: ее нельзя поставить на паузу, стереть или завершить.
+              </span>
+            </li>
+            <li>
+              <span>
+                Все события внутри вселенной происходят в режиме реального времени, а действия не зависят от внешних факторов.
+  
+              </span>
+            </li>
+            <li>
+              <span>
+                Нет ограничений по числу тех, кто населяет метавселенную.
+              </span>
+            </li>
+            <li>
+              <span>
+                В метавселенной своя экономика: люди получают «деньги» за проделанную «работу», владеют и распоряжаются имуществом.
+              </span>
+            </li>
+            <li>
+              <span>
+                Данные и цифровые активы из разных платформ совмещены: можно пользоваться вещами из Counter-Strike и Fortnite, покупать
+                машину из Need for Speed и продавать ее друзьям на Facebook.
+              </span>
+            </li>
+            <li>
+              <span>
+                Метавселенная наполнена «контентом и опытом», созданными ее пользователями, как отдельными людьми, так и организациями.
+              </span>
+            </li>
+          </ol>
+          <img src="img/article-content-pic.jpg" width="301" height="600" alt="">
+        </div>
         <p>
           Проектирование метавселенной актуально в <br> образовательной и корпоративной среде, в сфере <br> коммуникаций.
         </p>
