--- a/marmelad/_pages/index.html
+++ b/marmelad/_pages/index.html
@@ -23,5 +23,7 @@ layout: !!map
 	{% include "projects-news.html" %}
 
 	{% include "all-articles.html" %}
+	
+	{% include "other-news.html" %}
 
 {% endblock %}
