--- a/marmelad/_blocks/_footer/footer.html
+++ b/marmelad/_blocks/_footer/footer.html
@@ -1,7 +1,7 @@
 <footer block="footer">
   <div elem="section">
     <div elem="inner">
-      {% if pageTitle != "О проекте" %}
+      {% if pageTitle != "О проекте" and pageTitle != "Ошибка 404 - Страница не найдена" %}
         
       <div elem="top">
         <div elem="cols">
